email ui design - discovered and fix word wrap bug in nested flex item

--- a/less/ambient.css
+++ b/less/ambient.css
@@ -807,44 +807,25 @@ article[am-layout~="vertical"] > section {
   flex-flow: row wrap;
 }
 [am-row] div[am-col] {
-  -webkit-flex: 1 8.3333%;
-  -moz-flex: 1 8.3333%;
-  -ms-flex: 1 8.3333%;
-  flex: 1 8.3333%;
+  -webkit-flex: 1 auto;
+  -moz-flex: 1 auto;
+  -ms-flex: 1 auto;
+  flex: 1 auto;
+  width: 8.3333%;
 }
 [am-row] div[am-col][am-col~="25"] {
-  -webkit-flex-basis: auto;
-  -moz-flex-basis: auto;
-  -ms-flex-basis: auto;
-  flex-basis: auto;
   width: 25%;
 }
 [am-row] div[am-col][am-col~="33"] {
-  -webkit-flex-basis: auto;
-  -moz-flex-basis: auto;
-  -ms-flex-basis: auto;
-  flex-basis: auto;
   width: 33.333%;
 }
 [am-row] div[am-col][am-col~="66"] {
-  -webkit-flex-basis: auto;
-  -moz-flex-basis: auto;
-  -ms-flex-basis: auto;
-  flex-basis: auto;
   width: 66.6667%;
 }
 [am-row] div[am-col][am-col~="50"] {
-  -webkit-flex-basis: auto;
-  -moz-flex-basis: auto;
-  -ms-flex-basis: auto;
-  flex-basis: auto;
   width: 50%;
 }
 [am-row] div[am-col][am-col~="75"] {
-  -webkit-flex-basis: auto;
-  -moz-flex-basis: auto;
-  -ms-flex-basis: auto;
-  flex-basis: auto;
   width: 75%;
 }
 [am-row][am-row^="gutter margin"] > div[am-col] {
